# cyclonedx-rust-cargo

./: .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  flake.nix
cargo-cyclonedx/: CHANGELOG.md  Cargo.toml  README.md
cargo-cyclonedx/src/: author.rs  bom.rs  cli.rs  component.rs  config.rs  format.rs  generator.rs  lib.rs  license.rs  main.rs  metadata.rs  platform.rs  purl.rs  reference.rs  toml.rs  urlencode.rs
cargo-cyclonedx/tests/: cli.rs
cargo-cyclonedx/tests/fixtures/: crates_io_package.json  git_package.json  git_package_with_branch.json  root_package.json  workspace_package.json
cargo-cyclonedx/tests/fixtures/build_then_runtime_dep/: Cargo.toml
cargo-cyclonedx/tests/fixtures/with_hakari/: Cargo.toml
cyclonedx-bom/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
cyclonedx-bom-macros/: Cargo.toml
cyclonedx-bom-macros/src/: lib.rs
cyclonedx-bom-macros/tests/: lib.rs  ui.rs
cyclonedx-bom-macros/tests/ui/fail/: duplicated_struct.rs  duplicated_struct.stderr  duplicated_versioned.rs  duplicated_versioned.stderr  (+2 more)
cyclonedx-bom/src/: errors.rs  lib.rs  models.rs  prelude.rs  schema.rs  utilities.rs  validation.rs  xml.rs
cyclonedx-bom/src/external_models/: date_time.rs  mod.rs  normalized_string.rs  spdx.rs  uri.rs
cyclonedx-bom/src/models/: advisory.rs  annotation.rs  attached_text.rs  attachment.rs  bom.rs  code.rs  component.rs  component_data.rs  composition.rs  data_governance.rs  dependency.rs  external_reference.rs  hash.rs  license.rs  lifecycle.rs  metadata.rs  mod.rs  modelcard.rs  organization.rs  property.rs  service.rs  signature.rs  tool.rs  vulnerability.rs  vulnerability_analysis.rs  vulnerability_credits.rs  vulnerability_rating.rs  vulnerability_reference.rs  vulnerability_source.rs  vulnerability_target.rs
cyclonedx-bom/src/specs/: mod.rs
cyclonedx-bom/test-utils/: Cargo.toml
cyclonedx-bom/test-utils/src/: lib.rs
cyclonedx-bom/tests/: README.md  compare-version.sh  examples_tests_v1_4.rs  specification_tests.rs  specification_tests_v1_3.rs  specification_tests_v1_4.rs  specification_tests_v1_5.rs  todo.txt
cyclonedx-bom/tests/snapshots/: specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-assembly-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-bom-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-component-hashes-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-component-ref-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-component-swid-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-component-types-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-dependency-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-empty-components-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-external-reference-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-license-id-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-license-name-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-metadata-author-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-metadata-license-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-metadata-manufacture-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-metadata-supplier-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-metadata-tool-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-patch-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-service-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_json_specifications@valid-service-empty-objects-1.3.json.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-bom-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-component-ref-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-component-swid-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-component-types-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-empty-components-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-external-elements-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-external-reference-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-license-name-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-author-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-license-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-manufacture-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-supplier-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-timestamp-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-tool-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-minimal-viable-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-patch-1.3.xml.snap  specification_tests__it_should_parse_all_of_the_valid_xml_specifications@valid-service-empty-objects-1.3.xml.snap
(+501 files in other folders)
