[workspace]
resolver = "2"
members = [
  "cargo-cyclonedx",
  "cyclonedx-bom",
  "cyclonedx-bom-macros"
]

[workspace.package]
authors = [ "Steve Springett <steve.springett@owasp.org>", "Amy Keibler <3483663+amy-keibler@users.noreply.github.com>", "Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
edition = "2021"
homepage = "https://cyclonedx.org/"
license = "Apache-2.0"
repository = "https://github.com/CycloneDX/cyclonedx-rust-cargo"
rust-version = "1.70.0"
