[workspace]
resolver = "2"
members = [
  "cargo-cyclonedx",
  "cyclonedx-bom",
]

[workspace.package]
authors = [ "Steve Springett <steve.springett@owasp.org>", "Amy Keibler <3483663+amy-keibler@users.noreply.github.com>", "Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
edition = "2021"
homepage = "https://cyclonedx.org/"
license = "Apache-2.0"
repository = "https://github.com/CycloneDX/cyclonedx-rust-cargo"
rust-version = "1.70.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
