[package]
name = "cargo-cyclonedx"
version = "0.3.8"
authors = [ "Steve Springett <steve.springett@owasp.org>" ]
license = "Apache-2.0"
edition = "2018"
rust-version = "1.65.0"

description = "CycloneDX Software Bill of Materials (SBOM) for Rust Crates"
homepage = "https://cyclonedx.org/"
repository = "https://github.com/CycloneDX/cyclonedx-rust-cargo"
readme = "README.md"

categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
keywords = ["sbom", "bom", "components", "dependencies", "owasp"]

[[bin]]
name = "cargo-cyclonedx"
path = "src/main.rs"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.71"
cargo = "0.72.2"
clap = { version = "4.3.0", features = ["derive"] }
cyclonedx-bom = { version = "0.4.1", path = "../cyclonedx-bom" }
env_logger = "0.10.0"
log = "0.4.19"
once_cell = "1.17.1"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.5"
validator = { version = "0.16.0" }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
