[package]
name = "cargo-cyclonedx"
version = "0.3.8"
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
description = "CycloneDX Software Bill of Materials (SBOM) for Rust Crates"
keywords = ["sbom", "bom", "components", "dependencies", "owasp"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cargo-cyclonedx"
path = "src/main.rs"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.75"
cargo = "0.73.0"
clap = { version = "4.4.0", features = ["derive"] }
cyclonedx-bom = { version = "0.4.1", path = "../cyclonedx-bom" }
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
regex = "1.9.3"
serde = { version = "1.0.187", features = ["derive"] }
thiserror = "1.0.47"
toml = "0.7.6"
validator = { version = "0.16.1" }

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.3"
