[package]
name = "cargo-cyclonedx"
version = "0.5.7"
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
description = "CycloneDX Software Bill of Materials (SBOM) for Rust Crates"
keywords = ["sbom", "bom", "components", "dependencies", "owasp"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cargo-cyclonedx"
path = "src/main.rs"

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.75"
cargo-lock = "10.0.1"
cargo_metadata = "0.18.1"
clap = { version = "4.4.11", features = ["derive"] }
cyclonedx-bom = { version = "0.8.0", path = "../cyclonedx-bom" }
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
percent-encoding = "2.3.1"
purl = { version = "0.1.3", default-features = false, features = ["package-type"] }
regex = "1.9.3"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.48"
validator = { version = "0.16.1" }

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.3"
serde_json = "1.0.108"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cargo-cyclonedx-{ version }/{ name }-{ target }{ archive-suffix }"
