[package]
name = "cyclonedx-bom-macros"
version = "0.1.0"
description = "Procedural macros used internally by the `cyclonedx-bom` crate"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "fold"] }
