[package]
name = "cyclonedx-bom"
version = "0.4.3"
description = "CycloneDX Software Bill of Materials Library"
categories = []
keywords = ["sbom", "bom", "components", "dependencies", "owasp"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.21.2"
fluent-uri = "0.1.4"
once_cell = "1.18.0"
ordered-float = { version = "4.2.0", default-features = false }
packageurl = "0.3.0"
regex = "1.9.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spdx = "0.10.2"
thiserror = "1.0.48"
time = { version = "0.3.31", features = ["formatting", "parsing"] }
uuid = { version = "1.6.1", features = ["v4"] }
xml-rs = "0.8.16"

[dev-dependencies]
insta = { version = "1.33.0", features = ["glob", "json"] }
pretty_assertions = "1.4.0"
