[package]
name = "cyclonedx-bom"
version = "0.8.1"
description = "CycloneDX Software Bill of Materials Library"
categories = ["encoding", "parser-implementations"]
keywords = ["sbom", "bom", "components", "dependencies", "owasp"]
readme = "README.md"
exclude = ["tests/", "test-utils/"]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22.1"
fluent-uri = "0.4.1"
indexmap = "2.2.2"
once_cell = "1.18.0"
ordered-float = { version = "5.0.0", default-features = false }
purl = { version = "0.1.3", default-features = false }
regex = "1.9.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spdx = "0.13.0"
thiserror = "2.0.0"
time = { version = "0.3.29", features = ["formatting", "parsing"] }
uuid = { version = "1.6.1", features = ["v4"] }
xml-rs = "0.8.16"
cyclonedx-bom-macros = { version = "0.1.0", path = "../cyclonedx-bom-macros" }
strum = { version = "0.28.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.33.0", features = ["glob", "json"] }
pretty_assertions = "1.4.0"
test-utils = {path = "test-utils"}
